fix popup on smaller screen

--- a/src/client/src/styles/subscribe.css
+++ b/src/client/src/styles/subscribe.css
@@ -921,4 +921,8 @@ color: #007fff;
 		margin: 0 auto;
 		width: 90%;
 	}
+
+	.btn{
+		font-size: 15px;
+	}
 }
